--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,6 @@
+@import "vars.scss";
+@import "fonts.scss";
+
 html {
   box-sizing: border-box;
 }
@@ -10,4 +13,40 @@ html {
 
 body {
   min-width: 320px;
+  overflow-x: hidden;
+  margin: 0;
+}
+
+.container {
+  padding: 0 20px;
+}
+
+.header {
+  background-color: $accent;
+  &__inner {
+    min-height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.menu__btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
+  background-color: #fff;
+  border: none;
+  position: relative;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 12px;
+    height: 2px;
+    border-radius: 1px;
+    background-color: $accent;
+    top: 15px;
+    left: 14px;
+    box-shadow: 0 4px 0 0 $accent, 0 8px 0 0 $accent;
+  }
 }
