--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,6 +20,11 @@ body {
 .container {
   padding: 0 20px;
 }
+@media (min-width: 640px) {
+  .container {
+    padding: 0 30px;
+  }
+}
 
 .header {
   background-color: $accent;
@@ -28,6 +33,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+}
+@media (min-width: 640px) {
+  .header {
+    &__inner {
+      min-height: 100px;
+    }
   }
 }
 
