--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,23 @@ body {
     padding: 0 30px;
   }
 }
+@media (min-width: 768px) {
+  .container {
+    padding: 0 40px;
+  }
+}
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
+}
+@media (min-width: 1440px) {
+  .container {
+    max-width: 1320px;
+  }
+}
 
 .header {
   background-color: $accent;
@@ -60,5 +77,10 @@ body {
     top: 15px;
     left: 14px;
     box-shadow: 0 4px 0 0 $accent, 0 8px 0 0 $accent;
+  }
+}
+@media (min-width: 1440px) {
+  .menu__btn {
+    margin-right: 90px;
   }
 }
