--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,11 +21,6 @@ body {
   padding: 0 20px;
 }
 
-@media (min-width: 768px) {
-  .container {
-    padding: 0 40px;
-  }
-}
 @media (min-width: 1024px) {
   .container {
     max-width: 1200px;
@@ -75,3 +70,4 @@ body {
 }
 
 @import "tablet-640.scss";
+@import "tablet-768.scss";
