--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,12 +21,6 @@ body {
   padding: 0 20px;
 }
 
-@media (min-width: 1440px) {
-  .container {
-    max-width: 1320px;
-  }
-}
-
 .header {
   background-color: $accent;
   &__inner {
@@ -56,12 +50,8 @@ body {
     box-shadow: 0 4px 0 0 $accent, 0 8px 0 0 $accent;
   }
 }
-@media (min-width: 1440px) {
-  .menu__btn {
-    margin-right: 90px;
-  }
-}
 
 @import "tablet-640.scss";
 @import "tablet-768.scss";
 @import "tablet-1024.scss";
+@import "tablet-1440.scss";
