--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,3 +62,13 @@ body {
   background-size: cover;
   min-height: 193px;
 }
+
+.top-slider {
+  background: rgba(33, 33, 33, 0.5);
+  &__item {
+    color: #fff;
+    text-align: center;
+  }
+  &__title {
+  }
+}
