--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,6 +19,10 @@ body {
   min-width: 320px;
   overflow-x: hidden;
   margin: 0;
+  font-family: "Roboto-Regular", "sans-serif";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 h1,
@@ -79,5 +83,10 @@ h6 {
     text-align: center;
   }
   &__title {
+    font-family: "RobotoCondensed-Regular";
+    font-size: 28px;
+    line-height: 28px;
+    font-weight: 400;
+    text-transform: uppercase;
   }
 }
