--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -99,6 +99,18 @@ li {
     padding: 36px 0 28px;
     max-width: 243px;
     margin: 0 auto;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 61px;
+      height: 8px;
+      background-color: $text-color;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
   }
   .slick-dots {
     display: flex;
@@ -107,6 +119,13 @@ li {
     bottom: 20px;
     left: 0;
     right: 0;
+    .slick-active {
+      button {
+        background-color: transparent;
+        border: 1px solid #476e4d;
+        outline: none;
+      }
+    }
     button {
       font-size: 0;
       border: none;
