--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -111,6 +111,9 @@ li {
       right: 0;
       margin: 0 auto;
     }
+    &__btn {
+      display: none;
+    }
   }
   .slick-dots {
     display: flex;
