--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -33,6 +33,8 @@
       font-size: 18px;
       background-color: $accent;
       color: $bg-color;
+      padding: 16px 45px;
+      border-radius: 3px;
     }
   }
 }
