--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -37,5 +37,25 @@
       border-radius: 3px;
       border: none;
     }
+    .slick-dots {
+      bottom: 50px;
+    }
+    .slick-arrow {
+      width: 56px;
+      height: 56px;
+      border: none;
+      position: absolute;
+      right: 0;
+      // standart fix for buttons click normaly //
+      z-index: 5;
+    }
+    .slick-prev {
+      background-color: $accent;
+      top: calc(50% - 56px);
+    }
+    .slick-next {
+      background-color: $bg-color;
+      bottom: calc(50% - 56px);
+    }
   }
 }
