fixed backgroun position to slider background

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -82,7 +82,7 @@ button {
 .top {
   background-image: url("../images/bg-slider.jpg");
   background-repeat: no-repeat;
-  background-position: -64px center;
+  background-position: center center;
   background-size: cover;
   min-height: 193px;
 }
