--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -14,7 +14,7 @@
 
   .top {
     min-height: 386px;
-    background-position: -162px center;
+    background-position: center center;
   }
 
   .top-slider {
