--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -32,6 +32,7 @@
       display: block;
       margin: 0 auto 113px;
       font-size: 18px;
+      font-weight: 500;
       background-color: $accent;
       color: $bg-color;
       padding: 16px 45px;
