--- a/app/scss/tablet-1024.scss
+++ b/app/scss/tablet-1024.scss
@@ -7,4 +7,20 @@
     margin: 0 auto;
     padding: 0 40px;
   }
+
+  .top-slider {
+    &__item {
+      min-height: 618px;
+    }
+    &__title {
+      padding-top: 101px;
+      font-size: 84px;
+      line-height: 84px;
+      letter-spacing: 2px;
+      max-width: 750px;
+    }
+    .slick-dots {
+      bottom: 80px;
+    }
+  }
 }
