added style to call block for 320px

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -153,3 +153,29 @@ p {
     }
   }
 }
+
+.call {
+  background-color: $accent;
+  padding: 40px 0;
+  color: #fff;
+  text-align: center;
+  &__title {
+    @extend %roboto-500;
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 10px;
+  }
+  &__text {
+    margin-bottom: 40px;
+  }
+  &__btn {
+    padding: 16px 15px;
+    background-color: $bg-color;
+    color: $accent;
+    font-size: 18px;
+    @extend %roboto-500;
+    border-radius: 3px;
+    border: none;
+    text-transform: uppercase;
+  }
+}
