--- a/app/scss/tablet-768.scss
+++ b/app/scss/tablet-768.scss
@@ -28,4 +28,19 @@
       margin: 0 auto;
     }
   }
+
+  .call {
+    text-align: left;
+    &__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &__box {
+      max-width: 427px;
+    }
+    &__text {
+      margin-bottom: 0;
+    }
+  }
 }
