--- a/app/scss/tablet-1440.scss
+++ b/app/scss/tablet-1440.scss
@@ -36,4 +36,15 @@
       max-width: 796px;
     }
   }
+
+  .slick-arrow {
+    width: 70px;
+    height: 70px;
+  }
+  .slick-prev {
+    top: calc(50% - 70px);
+  }
+  .slick-next {
+    bottom: calc(50% - 70px);
+  }
 }
