--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -179,3 +179,10 @@ p {
     text-transform: uppercase;
   }
 }
+
+.services {
+  padding: 25px 0 40px;
+  text-align: center;
+  &__title {
+  }
+}
