--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -1,2 +1,50 @@
 @import "vars.scss";
 @import "fonts.scss";
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+body {
+  min-width: 320px;
+  overflow-x: hidden;
+  margin: 0;
+  font-family: "Roboto-Regular", "sans-serif";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+button {
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  padding: 0 20px;
+}
