--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,57 +1,10 @@
 @import "vars.scss";
 @import "fonts.scss";
+@import "global.scss";
 @import "tablet-640.scss";
 @import "tablet-768.scss";
 @import "tablet-1024.scss";
 @import "tablet-1440.scss";
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-body {
-  min-width: 320px;
-  overflow-x: hidden;
-  margin: 0;
-  font-family: "Roboto-Regular", "sans-serif";
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-button {
-  padding: 0;
-}
-
-p {
-  margin: 0;
-}
-
-.container {
-  padding: 0 20px;
-}
 
 .header {
   background-color: $accent;
