--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -19,6 +19,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
+  color: $default-color;
 }
 
 h1,
@@ -43,6 +44,11 @@ button {
 
 p {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .container {
