--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -54,3 +54,22 @@ a {
 .container {
   padding: 0 20px;
 }
+
+.title {
+  font-size: 24px;
+  line-height: 28px;
+  @extend %robotocondenced-400;
+  position: relative;
+  padding-bottom: 28px;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 8px;
+    background-color: $accent;
+    bottom: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+  }
+}
