--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -8,6 +8,11 @@ $default-color: #9b9b9b;
   font-weight: 300;
 }
 
+%robotocondenced-400 {
+  font-family: "RobotoCondensed-Regular";
+  font-weight: 400;
+}
+
 %roboto-500 {
   font-family: "Roboto-Medium";
   font-weight: 500;
