--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -136,6 +136,42 @@
 .services {
   padding: 25px 0 40px;
   text-align: center;
+  color: $accent;
   &__title {
+    margin-bottom: 47px;
+  }
+  &__descr {
+    font-size: 20px;
+    line-height: 24px;
+    color: $text-color;
+    margin-bottom: 21px;
+  }
+  &__text {
+    color: #797979;
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 40px;
+  }
+  &__item {
+    min-height: 310px;
+    border: 1px solid $bg-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  &__item-img {
+    margin-bottom: 30px;
+  }
+  &__item-title {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 2px;
+    color: $text-color;
+  }
+  &__item-text {
+    display: none;
+  }
+  &__item-link {
+    display: none;
   }
 }
