--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -155,9 +155,13 @@
   &__item {
     min-height: 310px;
     border: 1px solid $bg-color;
+    border-bottom: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    &:last-child {
+      border-bottom: 1px solid $bg-color;
+    }
   }
   &__item-img {
     margin-bottom: 30px;
