added roboto condenced bolt to vars

--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -12,6 +12,10 @@ $default-color: #9b9b9b;
   font-family: "RobotoCondensed-Regular";
   font-weight: 400;
 }
+%robotocondenced-700 {
+  font-family: "RobotoCondensed-Bold";
+  font-weight: 700;
+}
 
 %roboto-500 {
   font-family: "Roboto-Medium";
