--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -8,6 +8,11 @@ $default-color: #9b9b9b;
   font-weight: 300;
 }
 
+%dosis-500 {
+  font-family: "Dosis-Medium";
+  font-weight: 500;
+}
+
 %robotocondenced-400 {
   font-family: "RobotoCondensed-Regular";
   font-weight: 400;
