--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -171,6 +171,12 @@
       .services__item-title {
         margin-bottom: 30px;
       }
+      .services__item-inner {
+        border: 4px solid $accent;
+        margin: 18px;
+        padding: 5px 20px;
+        min-height: 277px;
+      }
     }
   }
   &__item-img {
@@ -192,5 +198,6 @@
     letter-spacing: 2px;
     color: $accent;
     @extend %robotocondenced-700;
+    text-transform: uppercase;
   }
 }
