--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -154,6 +154,7 @@
   }
   &__item {
     min-height: 310px;
+    padding: 0 18px;
     border: 1px solid $bg-color;
     border-bottom: none;
     display: flex;
@@ -176,7 +177,7 @@
       }
       .services__item-inner {
         border: 4px solid $accent;
-        margin: 18px;
+        margin: 18px 0;
         padding: 25px 20px 5px;
         min-height: 277px;
       }
