--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -1,6 +1,11 @@
 @import "vars.scss";
 @import "fonts.scss";
 
+.title {
+  font-size: 48px;
+  line-height: 56px;
+}
+
 @media (min-width: 640px) {
   .container {
     padding: 0 30px;
@@ -59,5 +64,78 @@
       background-color: $bg-color;
       bottom: calc(50% - 56px);
     }
+  }
+}
+
+.services {
+  padding: 24px 0 99px;
+  &__title {
+    margin-bottom: 20px;
+    &::after {
+      display: none;
+    }
+  }
+  &__descr {
+    font-size: 20px;
+    line-height: 24px;
+    color: $text-color;
+    margin-bottom: 21px;
+  }
+  &__text {
+    color: #797979;
+    font-size: 15px;
+    line-height: 17px;
+    margin-bottom: 40px;
+  }
+  &__item {
+    min-height: 310px;
+    padding: 0 18px;
+    border: 1px solid $bg-color;
+    border-bottom: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    &:last-child {
+      border-bottom: 1px solid $bg-color;
+    }
+    &:hover {
+      border: 1px solid $accent;
+      .services__item-text,
+      .services__item-link {
+        display: block;
+      }
+      .services__item-title {
+        margin-bottom: 30px;
+      }
+      .services__item-img {
+        margin-bottom: 14px;
+      }
+      .services__item-inner {
+        border: 4px solid $accent;
+        margin: 18px 0;
+        padding: 25px 20px 5px;
+        min-height: 277px;
+      }
+    }
+  }
+  &__item-img {
+    margin-bottom: 30px;
+  }
+  &__item-title {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 2px;
+    color: $text-color;
+  }
+  &__item-text {
+    display: none;
+    margin-bottom: 17px;
+  }
+  &__item-link {
+    display: none;
+    letter-spacing: 2px;
+    color: $accent;
+
+    text-transform: uppercase;
   }
 }
