--- a/app/scss/tablet-768.scss
+++ b/app/scss/tablet-768.scss
@@ -44,3 +44,35 @@
     }
   }
 }
+
+.services {
+  padding: 50px 0 0;
+  &__title {
+    margin-bottom: 30px;
+  }
+  &__descr {
+    text-align: left;
+    &::after {
+      margin-left: 0;
+    }
+  }
+  &__text {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -30px;
+  }
+  &__item {
+    min-height: 310px;
+    width: 50%;
+    &:nth-child(even) {
+      border-left: none;
+    }
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+}
