--- a/app/scss/tablet-768.scss
+++ b/app/scss/tablet-768.scss
@@ -57,22 +57,22 @@
     }
   }
   &__text {
-    font-size: 18px;
-    line-height: 24px;
+    margin-bottom: 27px;
+    text-align: left;
   }
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -30px;
+    margin: 0 -40px;
   }
   &__item {
-    min-height: 310px;
-    width: 50%;
-    &:nth-child(even) {
-      border-left: none;
-    }
-    &:last-child {
-      border-bottom: none;
+    min-height: 334px;
+    padding: 0 65px;
+    &:hover {
+      padding: 0 18px;
+      .services__item-inner {
+        margin: 18px 0;
+        padding: 35px 60px 5px;
+        min-height: 288px;
+      }
     }
   }
 }
