--- a/app/scss/tablet-1440.scss
+++ b/app/scss/tablet-1440.scss
@@ -48,3 +48,43 @@
     bottom: calc(50% - 70px);
   }
 }
+
+.services {
+  padding: 0;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__head {
+    max-width: 393px;
+  }
+  &__title {
+    margin-bottom: 70px;
+    text-align: left;
+  }
+  &__descr {
+    padding-bottom: 46px;
+    margin-bottom: 40px;
+  }
+  &__text {
+    margin-bottom: 32px;
+    max-width: 608px;
+  }
+  &__item {
+    width: 25%;
+    min-height: 277px;
+    padding: 0 17px;
+    &:nth-child(2),
+    &:nth-child(6) {
+      border-right: none;
+    }
+    &:hover {
+      padding: 0 17px;
+      .services__item-inner {
+        margin: 10px 0;
+        padding: 21px 9px 5px;
+        min-height: 255px;
+      }
+    }
+  }
+}
