--- a/app/scss/tablet-1440.scss
+++ b/app/scss/tablet-1440.scss
@@ -54,8 +54,10 @@
   &__inner {
     display: flex;
     justify-content: space-between;
+    margin: 0 -100px 0 -50px;
   }
   &__head {
+    min-width: 350px;
     max-width: 350px;
     margin-right: 100px;
   }
@@ -67,20 +69,18 @@
     padding-bottom: 38px;
     margin-bottom: 35px;
   }
+  &__items {
+    margin: 0;
+  }
   &__item {
-    width: 25%;
-    min-height: 277px;
-    padding: 0 17px;
-    &:nth-child(2),
-    &:nth-child(6) {
-      border-right: none;
-    }
+    width: 230px;
+    height: 273px;
+    padding: 0 5px;
     &:hover {
-      padding: 0 17px;
+      padding: 0 5px;
       .services__item-inner {
-        margin: 10px 0;
-        padding: 21px 9px 5px;
-        min-height: 255px;
+        margin: 5px 0;
+        padding: 10px 3px 5px;
       }
     }
   }
