--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -164,7 +164,7 @@
       border-bottom: 1px solid $bg-color;
     }
     &:hover {
-      border: 1px solid $accent;
+      border: 1px solid $bg-color;
       .services__item-text,
       .services__item-link {
         display: block;
