--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -167,7 +167,9 @@
       border: 1px solid $bg-color;
       .services__item-text,
       .services__item-link {
-        display: block;
+        opacity: 1;
+        height: auto;
+        overflow: visible;
       }
       .services__item-title {
         margin-bottom: 30px;
@@ -193,12 +195,17 @@
     color: $text-color;
     @extend %robotocondenced-700;
   }
+  &__item-text,
+  &__item-link {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.5s;
+  }
   &__item-text {
-    display: none;
     margin-bottom: 17px;
   }
   &__item-link {
-    display: none;
     letter-spacing: 2px;
     color: $accent;
     @extend %robotocondenced-700;
