--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -215,3 +215,19 @@
     text-transform: uppercase;
   }
 }
+
+.project {
+  text-align: center;
+  padding: 20px 0 40px;
+  background: linear-gradient(180deg, #2b4074 0%, rgba(43, 64, 116, 0) 100%);
+  &__title {
+    color: #fff;
+    margin-bottom: 40px;
+    &::after {
+      color: #fff;
+    }
+  }
+}
+
+.team {
+}
