--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -227,6 +227,18 @@
       color: #fff;
     }
   }
+  &__item-img {
+    min-height: 250px;
+    border-radius: 4px;
+  }
+  &__item-link {
+    display: block;
+    padding: 20px 0;
+    letter-spacing: 2px;
+    line-height: 19px;
+    color: $accent;
+    @extend %robotocondenced-700;
+  }
 }
 
 .team {
