--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -234,11 +234,18 @@
     background-color: rgba($bg-color, 0.83);
     border-radius: 4px;
     min-height: 227px;
+    opacity: 0;
+    transition: all 0.5s;
   }
   &__item-img {
     min-height: 250px;
     border-radius: 4px;
     padding: 12px 14px;
+    &:hover {
+      .project__item-inner {
+        opacity: 1;
+      }
+    }
   }
   &__item-info,
   &__item-search {
