--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -266,8 +266,21 @@
   text-align: center;
   &__images {
     width: 100%;
+    margin-bottom: 40px;
   }
   &__title {
     color: $text-color;
+    margin-bottom: 23px;
+  }
+  &__text {
+    margin-bottom: 84px;
+  }
+  &__btn {
+    border: none;
+    background-color: $accent;
+    text-transform: uppercase;
+    border-radius: 3px;
+    padding: 21px 26px;
+    color: $bg-color;
   }
 }
