--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -239,6 +239,9 @@
   }
   &__item-img {
     min-height: 250px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 4px;
     padding: 12px 14px;
     &:hover {
