added style to project section for 640px

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -218,7 +218,7 @@
 
 .project {
   text-align: center;
-  padding: 20px 0 40px;
+  padding: 20px 0;
   background: linear-gradient(180deg, #2b4074 0%, rgba(43, 64, 116, 0) 100%);
   &__title {
     color: #fff;
