--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -111,4 +111,16 @@
       }
     }
   }
+
+  .project {
+    padding: 40px 0 20px;
+    &__item-img {
+      min-height: 460px;
+      padding: 21px 24px;
+    }
+    &__item-link {
+      font-size: 20px;
+      line-height: 23px;
+    }
+  }
 }
