added style to project section for 640px

--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -118,6 +118,9 @@
       min-height: 460px;
       padding: 21px 24px;
     }
+    &__item-inner {
+      min-height: 417px;
+    }
     &__item-link {
       font-size: 20px;
       line-height: 23px;
