added style to project section for 1024

--- a/app/scss/tablet-1024.scss
+++ b/app/scss/tablet-1024.scss
@@ -61,4 +61,13 @@
       }
     }
   }
+
+  .project {
+    &__items {
+      justify-content: center;
+    }
+    &__item-img {
+      margin: 0 12px;
+    }
+  }
 }
