--- a/app/scss/tablet-1440.scss
+++ b/app/scss/tablet-1440.scss
@@ -84,4 +84,15 @@
       }
     }
   }
+
+  .project {
+    &__items {
+      flex-wrap: nowrap;
+      justify-content: space-between;
+    }
+    &__item-img {
+      margin: 0;
+      width: 300px;
+    }
+  }
 }
