--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -126,4 +126,21 @@
       line-height: 23px;
     }
   }
+
+  .team {
+    padding: 46px 0 53px;
+    &__images {
+      margin-bottom: 40px;
+    }
+    &__title {
+      margin-bottom: 40px;
+    }
+    &__text {
+      margin-bottom: 56px;
+    }
+    &__btn {
+      font-size: 20px;
+      font-weight: 500;
+    }
+  }
 }
