--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -1,11 +1,6 @@
 @import "vars.scss";
 @import "fonts.scss";
 
-.title {
-  font-size: 48px;
-  line-height: 56px;
-}
-
 @media (min-width: 640px) {
   .container {
     padding: 0 30px;
@@ -14,6 +9,14 @@
   .header {
     &__inner {
       min-height: 100px;
+    }
+  }
+
+  .title {
+    font-size: 48px;
+    line-height: 56px;
+    &::after {
+      width: 100px;
     }
   }
 
@@ -140,7 +143,6 @@
     }
     &__btn {
       font-size: 20px;
-      font-weight: 500;
     }
   }
 }
