--- a/app/scss/tablet-768.scss
+++ b/app/scss/tablet-768.scss
@@ -94,4 +94,29 @@
       padding: 30px 0;
     }
   }
+
+  .team {
+    padding: 40px 0 48px;
+    text-align: left;
+    &__inner {
+      display: flex;
+    }
+    &__images {
+      margin-bottom: 0px;
+      width: 240px;
+      margin-right: 34px;
+    }
+    &__title {
+      margin-bottom: 7px;
+      &__after {
+        margin-left: 0;
+      }
+    }
+    &__text {
+      margin-bottom: 30px;
+    }
+    &__btn {
+      font-size: 18px;
+    }
+  }
 }
