--- a/app/scss/tablet-1440.scss
+++ b/app/scss/tablet-1440.scss
@@ -95,4 +95,19 @@
       width: 300px;
     }
   }
+
+  .team {
+    padding: 50px 0 110px;
+    &__images {
+      width: 470px;
+      margin-right: 93px;
+    }
+    &__title {
+      margin-bottom: 40px;
+    }
+    &__text {
+      margin-bottom: 40px;
+      width: 553px;
+    }
+  }
 }
