--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -289,3 +289,15 @@
     font-weight: 500;
   }
 }
+
+.news {
+  background-color: $bg-color;
+  &__title {
+    font-size: 24px;
+    line-height: 38px;
+    padding: 40px 19px 20px;
+    margin-bottom: 40px;
+    text-align: center;
+    color: $text-color;
+  }
+}
