--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -300,7 +300,19 @@
     text-align: center;
     color: $text-color;
   }
+  &__item-link {
+    display: block;
+    background-color: #fff;
+    border-radius: 4px;
+    margin-bottom: 20px;
+  }
   &__item-img {
     border-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    width: 100%;
+  }
+  &__item-title {
+    padding: 10px 20px;
   }
 }
