--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -292,10 +292,11 @@
 
 .news {
   background-color: $bg-color;
+  padding-bottom: 40px;
   &__title {
     font-size: 24px;
     line-height: 38px;
-    padding: 40px 19px 20px;
+    padding: 40px 19px 40px;
     margin-bottom: 40px;
     text-align: center;
     color: $text-color;
@@ -313,6 +314,11 @@
     width: 100%;
   }
   &__item-title {
-    padding: 10px 20px;
+    padding: 10px 12px;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 2px;
+    text-align: left;
+    color: $text-color;
   }
 }
