--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -306,6 +306,9 @@
     background-color: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
+    &:hover {
+      border: 10px solid $accent;
+    }
   }
   &__item-img {
     border-radius: 4px;
