added style for news block

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -301,7 +301,7 @@
     text-align: center;
     color: $text-color;
   }
-  &__item-link {
+  &__item {
     display: block;
     background-color: #fff;
     border-radius: 4px;
