--- a/app/scss/tablet-640.scss
+++ b/app/scss/tablet-640.scss
@@ -151,6 +151,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      align-items: flex-start;
     }
     &__title {
       font-size: 48px;
