--- a/app/scss/tablet-768.scss
+++ b/app/scss/tablet-768.scss
@@ -124,4 +124,34 @@
       font-size: 18px;
     }
   }
+
+  .news {
+    &__items-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    &__title {
+      font-size: 48px;
+      line-height: 38px;
+    }
+    &__item {
+      width: 50%;
+    }
+    &__item-img {
+      border-radius: 4px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      width: 100%;
+    }
+    &__item-title {
+      padding: 10px 12px;
+      font-size: 18px;
+      line-height: 21px;
+      letter-spacing: 2px;
+      text-align: left;
+      color: $text-color;
+    }
+  }
 }
